--- a/16/03/package.json
+++ b/16/03/package.json
@@ -13,8 +13,6 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "babel-plugin-component": "^1.1.1",
-    "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
@@ -27,19 +25,11 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "url-loader": "^2.1.0",
-    "vue-loader": "^15.7.1",
-    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "mint-ui": "^2.2.13",
-    "vue": "^2.6.10",
-    "vue-preview": "^1.1.3",
-    "vue-resource": "^1.5.1",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.1"
+    "bootstrap": "^4.3.1"
   }
 }
