--- a/16/04/.babelrc
+++ b/16/04/.babelrc
@@ -1,6 +1,6 @@
 {
     "presets": ["env", "stage-0"],
-    "plugins": ["transform-runtime","transform-remove-strict-mode",["component", [
+    "plugins": ["transform-runtime",["component", [
         {
           "libraryName": "mint-ui",
           "style": true
