--- a/16/04/package.json
+++ b/16/04/package.json
@@ -14,7 +14,6 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-component": "^1.1.1",
-    "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
@@ -37,9 +36,6 @@
     "bootstrap": "^4.3.1",
     "mint-ui": "^2.2.13",
     "vue": "^2.6.10",
-    "vue-preview": "^1.1.3",
-    "vue-resource": "^1.5.1",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.1"
+    "vue-router": "^3.1.3"
   }
 }
